<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_contents_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/et_destination_description_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_destination_content_input" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/b_take_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginLeft="@dimen/margin_medium"
        android:text="@string/label_take_image"
        android:drawableLeft="@drawable/ic_baseline_camera_alt_24"
        app:layout_constraintTop_toBottomOf="@id/til_contents_input"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/b_take_image"/>

    <Button
        android:id="@+id/b_get_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:text="@string/label_get_location"
        android:drawableLeft="@drawable/ic_baseline_add_location_24"
        app:layout_constraintTop_toBottomOf="@id/til_contents_input"
        app:layout_constraintLeft_toRightOf="@id/b_take_image"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageView
        android:id="@+id/iv_destination_image"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintTop_toBottomOf="@id/b_take_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/margin_medium"/>

    <TextView
        android:id="@+id/tv_destination_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_date"
        android:textColor="@color/black"
        android:layout_marginLeft="@dimen/margin_medium"
        android:textSize="@dimen/text_small"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintTop_toBottomOf="@+id/iv_destination_image" />

    <TextView
        android:id="@+id/tv_destination_location_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_country"
        android:textColor="@color/black"
        android:layout_marginLeft="@dimen/margin_medium"
        android:textSize="@dimen/text_small"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintTop_toBottomOf="@+id/tv_destination_date" />

    <TextView
        android:id="@+id/tv_destination_location_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_city"
        android:textColor="@color/black"
        android:textSize="@dimen/text_small"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintTop_toBottomOf="@+id/tv_destination_location_country" />

    <Button
        android:id="@+id/b_save_destination"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/label_save_destination"
        android:drawableLeft="@drawable/ic_baseline_save_24"
        android:layout_marginBottom="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>